8153360: G1HRRSFlushLogBuffersOnVerify with remembered set verification does not work

Reviewed-by: sjohanss, tschatzl